observium/observium-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: observium
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - observium.burntsheep.com
    secretName: observium-cert
  rules:
  - host: observium.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: observium
          servicePort: 80
